--- a/Java_Projeto/login/index.html
+++ b/Java_Projeto/login/index.html
@@ -15,8 +15,8 @@
         <input type="text" id="inputNome" placeholder="Digite seu nome">
         <br><br>
 
-        <label for="inputSenha">Senha:</label>
-        <input type="text" id="inputSenha" placeholder="Digite sua Senha">
+        <label for="inputPassword">Senha:</label>
+        <input type="password" id="inputPassword" placeholder="">
         <br><br>
 
         <button type="button" id="btnCapturar">Pronto</button>
