melhora de interface

--- a/Java_Projeto/login/index.html
+++ b/Java_Projeto/login/index.html
@@ -14,13 +14,16 @@
         <label for="inputNome">Nome:</label>
         <input type="text" id="inputNome" placeholder="Digite seu nome">
         <br><br>
-
-        <label for="inputPassword">Senha:</label>
-        <input type="password" id="inputPassword" placeholder="">
-        <br><br>
-
+     <div>
+          <label for="inputPassword">Senha:</label>
+          <input type="password" id="inputPassword" placeholder="">
+          <span id="SenhaErro" class="senha-erro"></span>
+            <br><br>
+         
+     </div>
         <button type="button" id="btnCapturar">Pronto</button>
-
+        
+        <br><br>
     </form>
 
     <script src="index.js"></script> 
