Update do estilo

--- a/Java_Projeto/EscolhaSeuSite/index.html
+++ b/Java_Projeto/EscolhaSeuSite/index.html
@@ -4,20 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>escolha um site</title>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        margin-top: 60px;
-        background-color: #9c9999;
-        height: 70vh;
-    }
-    h1 {
-        color: #361010;
-        margin-bottom: 40px;
-    }
-
-    /* Novo: estilo do container do botão e imagem */
+<link rel="stylesheet" href="style.css">
+<style>  /* Novo: estilo do container do botão e imagem */
     .btn-container {
         position: relative;
         display: inline-block;
